Loading data from JSON file

--- a/public/index.html
+++ b/public/index.html
@@ -128,6 +128,9 @@
                             '#ff6384',
                             '#36a2eb',
                             '#fd6b19',
+                            '#eb8034',
+                            '#5edb4b',
+                            '#4bdbd9'
                         ]
                     }
                 ],
